Fix big date separators when jump to date is enabled (#10404)
Fix https://github.com/vector-im/element-web/issues/22969

--- a/res/css/views/messages/_DateSeparator.pcss
+++ b/res/css/views/messages/_DateSeparator.pcss
@@ -30,9 +30,13 @@ limitations under the License.
     border-bottom: 1px solid $menu-selected-color;
 }
 
-.mx_DateSeparator > h2 {
-    margin: 0 25px;
+.mx_DateSeparator_dateContent {
+    padding: 0 25px;
+}
+
+.mx_DateSeparator_dateHeading {
     flex: 0 0 auto;
+    margin: 0;
     font-size: inherit;
     font-weight: inherit;
     color: inherit;
